        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4-DEV
      % Version 10
      _ 2015-xx-xx
      * Close #43 old problem when re-sync make domodroid freeze
      * Correct some bugs (map modifiable by longclic but disable in option)
      * Command working in 0.4 for DT_Trigger with wol plugin at least
      * Add the Changelog (also in about view)
      * Add name of current element it alert title box
      * Improve MQ option by getting settings from rest at sync
      * Close #2090 bug with MQ address
      % Version 9
      _ 2015-09-02
      * Add the butler part if in 0.4
      * Add boolean to be activated (on/off) directly from map
      * Longlic on map to modify it
      *	Device are now sorted by name in house organization menu
      * Boolean command for 0.4 should work
      % Version 8
      _ 2015-05-09
      * 1st domogik 0.4 compatible version.
	  * Only sensor are working for the moment (no commands in this version).
	  % Version 7
      _ 2014-10-17
      * Preview icon in add list from map mode
	  * New menu
	  * New icons
	  * New preferences
	  * New language NL start
	  * Fix a bug in start on map when never sync
	  * Fix Some Bug on 1st Launch
	  % Version 5
      _ 2014-09-27
      * Fix a bug with 2 colons options.
      * Allow user to add a widget on root house.
      * Allow widgets in usage area to be seen even if by_usage is force
	  % Version 4
      _ 2014-09-26
      * Icon are now visible when you want to change it.
      * Correction of a bug in device as no usage in domogik 0.3
      * Continue working new widget forCallerID
	  % Version 3
      _ 2014-09-14
      * Correction of a bug when deleting widget